// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tokenise -- elm input Converts a nested import to a list 1`] = `
Array [
  Object {
    "meta": Array [
      "import Browser.Dom as Dom",
    ],
    "name": "import Browser.Dom as Dom",
  },
]
`;

exports[`tokenise -- elm input Converts a nested import with exposing 1`] = `
Array [
  Object {
    "meta": Array [
      "import DictSet exposing (DictSet)",
    ],
    "name": "import DictSet exposing (DictSet)",
  },
]
`;

exports[`tokenise -- js input Converts a default import to a token list 1`] = `
Object {
  "endIndex": 26,
  "startIndex": 0,
  "tokens": Array [
    Object {
      "isDefaultExport": false,
      "meta": Array [
        "import React from 'react';",
        "React",
        "react",
      ],
      "name": Object {
        "default": "React",
        "named": Array [],
      },
      "packageName": "react",
    },
  ],
}
`;

exports[`tokenise -- js input Converts a named import to a token list 1`] = `
Array [
  Object {
    "isDefaultExport": false,
    "meta": Array [
      "import { Query } from '@apollo/react-components';",
      "{ Query }",
      "@apollo/react-components",
    ],
    "name": Object {
      "default": "",
      "named": Array [
        "Query",
      ],
    },
    "packageName": "@apollo/react-components",
  },
]
`;

exports[`tokenise -- js input Converts mixed named and default exports 1`] = `
Array [
  Object {
    "isDefaultExport": false,
    "meta": Array [
      "import animals, { cat, dog } from './animals.js';",
      "animals, { cat, dog }",
      "./animals.js",
    ],
    "name": Object {
      "default": "animals",
      "named": Array [
        "cat",
        "dog",
      ],
    },
    "packageName": "./animals.js",
  },
]
`;

exports[`tokenise -- js input Converts multiple multi-line named imports to a token list 1`] = `
Array [
  Object {
    "isDefaultExport": false,
    "meta": Array [
      "import type {
        DemographicFocusAgentData,
        DemographicFocusGroup,
        QueryVariables,
      } from '../graphql/queries';",
      " {
        DemographicFocusAgentData,
        DemographicFocusGroup,
        QueryVariables,
      }",
      "../graphql/queries",
    ],
    "name": Object {
      "default": "",
      "named": Array [
        "DemographicFocusAgentData",
        "DemographicFocusGroup",
        "QueryVariables",
      ],
    },
    "packageName": "../graphql/queries",
  },
]
`;

exports[`tokenise -- js input Converts multiple named imports to a token list 1`] = `
Array [
  Object {
    "isDefaultExport": false,
    "meta": Array [
      "import { Button, Text, Icon } from '@kaizen/component-library';",
      "{ Button, Text, Icon }",
      "@kaizen/component-library",
    ],
    "name": Object {
      "default": "",
      "named": Array [
        "Button",
        "Text",
        "Icon",
      ],
    },
    "packageName": "@kaizen/component-library",
  },
]
`;
